Updated css for example.

--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
                         <h3>Demonstration</h3>
                         <form id="siteSearchForm">
                             <div class="search-row">
-                                <label class="pull-left" for="appKey">App Key</label>
-                                <input type="text" id="appKey" class="pull-left" />
+                                <label for="appKey">App Key</label>
+                                <input type="text" id="appKey" />
                             </div>
                             <div class="search-row">
                                 <p>
@@ -106,8 +106,8 @@
                                 </p>
                             </div>
                             <div class="search-row">
-                                <label class="pull-left" for="searchBox">Query</label>
-                                <input class="pull-left" type="search" id="searchBox" />
+                                <label for="searchBox">Query</label>
+                                <input type="search" id="searchBox" />
                                 <input type="submit" value="Search" class="btn btn-success pull-left" />
                                 <input type="hidden" value="1" id="pageNumber" />
                                 <input type="hidden" value="" id="lastSearch" />
